borsh-derive/src/internals/serialize/enum/snapshots/borsh_derive__internals__serialize__r#enum__tests__borsh_skip_tuple_variant_field.snap
---
source: borsh-derive/src/internals/serialize/enum/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::ser::BorshSerialize for AATTB {
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        let variant_idx: u8 = match self {
            AATTB::B(..) => 0u8,
            AATTB::NegatedVariant { .. } => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            AATTB::B(_id0, _id1) => {}
            AATTB::NegatedVariant { beta, .. } => {
                borsh::BorshSerialize::serialize(beta, writer)?;
            }
        }
        Ok(())
    }
}

