borsh-derive/src/internals/serialize/enum/snapshots/borsh_derive__internals__serialize__r#enum__tests__generic_serialize_bound.snap
---
source: borsh-derive/src/internals/serialize/enum/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T: Debug, U> borsh::ser::BorshSerialize for A<T, U>
where
    T: borsh::ser::BorshSerialize + PartialOrd,
    U: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        let variant_idx: u8 = match self {
            A::C { .. } => 0u8,
            A::D(..) => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            A::C { a, b, .. } => {
                borsh::BorshSerialize::serialize(a, writer)?;
                borsh::BorshSerialize::serialize(b, writer)?;
            }
            A::D(id0, id1) => {
                borsh::BorshSerialize::serialize(id0, writer)?;
                borsh::BorshSerialize::serialize(id1, writer)?;
            }
        }
        Ok(())
    }
}

